@@ -1,3 +1,12 @@
+2011-07-14  Andrey Kosyakov  <caseq@chromium.org>
+
+        Web Inspector: remove more unused CSS from inspector.css
+        https://bugs.webkit.org/show_bug.cgi?id=64529
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/inspector.css:
+
 2011-07-14  Ryosuke Niwa  <rniwa@webkit.org>
 
         Move subtreeHasChanged from RenderTextControl to HTMLTextFormControlElement
